WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21521
REGRESSION: placeholder text not updated when the placeholder attribute changes value
https://bugs.webkit.org/show_bug.cgi?id=21521
Summary
REGRESSION: placeholder text not updated when the placeholder attribute chang...
Timothy Hatcher
Reported
2008-10-10 07:49:11 PDT
Switching panels in the Web Inspector changes the placeholder attribute. The attribute value changes from a non-empty string to another non-empty string, and it wasn't updating. Focusing and unfocusing the field would trigger an update.
Attachments
Proposed patch
(4.21 KB, patch)
2008-10-10 07:51 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Proposed patch
(6.96 KB, patch)
2008-10-10 08:24 PDT
,
Timothy Hatcher
adele
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2008-10-10 07:51:55 PDT
Created
attachment 24260
[details]
Proposed patch
Timothy Hatcher
Comment 2
2008-10-10 08:24:12 PDT
Created
attachment 24261
[details]
Proposed patch
Timothy Hatcher
Comment 3
2008-10-10 13:28:10 PDT
Landed in
r37488
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug