        Fixes a regression with input search fields, where the placeholder text         would not be updated when the value of the placeholder attribute changed.

https://bugs.webkit.org/show_bug.cgi?id=21521

        Reviewed by Adele Peterson.

        Test: fast/forms/search-placeholder-value-changed.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::parseMappedAttribute): Pass true for the
        placeholderValueChanged parameter of updatePlaceholderVisibility.
        (WebCore::HTMLInputElement::updatePlaceholderVisibility): Add parameter
        for placeholderValueChanged that informs the method that the value changed.
        * html/HTMLInputElement.h: Add the placeholderValueChanged to the
        updatePlaceholderVisibility method. Made it default to false.

Canonical link: https://commits.webkit.org/29733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37488 268f45cc-cd09-0410-ab3c-d52691b4dbfc